--- a/src/componentes/Pagina_principal.css
+++ b/src/componentes/Pagina_principal.css
@@ -31,6 +31,7 @@ h1 {
   color: #2563eb;
   font-weight: 800;
   margin-bottom: 10px;
+  padding: 30px;
 }
 
 h2 {
@@ -85,7 +86,7 @@ ul li {
   display: inline-block;
   text-decoration: none;
   background: linear-gradient(135deg, #60a5fa, #f9a8d4);
-  color: #fff;
+  color: #ffffff;
   padding: 14px 35px;
   border-radius: 40px;
   font-size: 1.1rem;
